<resources>
    <string name="app_name">Kotlin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TitleHome">Home</string>
    <string name="TitleGallery">Gallery</string>
    <string name="TitleSlideshow">Slideshow</string>
    <string name="TitleTools">Tools</string>

    <string name="action_settings">Settings</string>
    <string name="card_title">titulo</string>
    <string name="card_content">contenido</string>
    <string name="TransitionAvatar">transitionAvatar</string>
    <string name="TransitionTitulo">transitionTitulo</string>
    <string name="TransitionContenido">transitionContenido</string>
    <string name="TransitionDetalle">transitionDetalle</string>
    <string name="button.finish">FINISH</string>


</resources>
