<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="180dp"
                android:layout_height="220dp"
>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            android:elevation="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                    android:id="@+id/books_image"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/side_nav_bar"
                    android:transitionName="@string/TransitionAvatar"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                <TextView
                        android:id="@+id/books_titulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/card_title"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:transitionName="@string/TransitionTitulo"
                />
                <TextView
                        android:id="@+id/books_contenido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_content"
                        android:textColor="#555"
                        android:transitionName="@string/TransitionContenido"
                />
            </LinearLayout>
            <!--   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">
                   <Button
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/action_share"
                           android:theme="@style/PrimaryFlatButton"/>
                   <Button
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/action_explore"
                           android:theme="@style/PrimaryFlatButton"/>
               </LinearLayout>-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>