<?xml version="1.0" encoding="utf-8"?>
<!--

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"/>

    <TextView
            android:id="@+id/tvSuperhero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivAvatar"
            android:layout_toEndOf="@+id/ivAvatar"
            tools:text="dadawdawdwd"/>

    <TextView
            android:id="@+id/tvRealName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@+id/tvSuperhero"
            android:layout_toRightOf="@+id/ivAvatar"
            android:layout_toEndOf="@+id/ivAvatar"
            tools:text="wdawd"/>

    <TextView
            android:id="@+id/tvPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:text="DC"/>
</RelativeLayout>

-->

<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        android:layout_margin="5dp">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:transitionName="@string/TransitionAvatar"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:layout_alignParentLeft="true"/>

        <LinearLayout
                android:id="@+id/LinerarContent"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/ivAvatar"
                android:layout_marginLeft="3dp">

            <TextView
                    android:id="@+id/tvSuperhero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:transitionName="@string/TransitionTitulo"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/ivAvatar"
                    android:layout_toEndOf="@+id/ivAvatar"
                    tools:text="dadawdawdwd"/>
            <TextView
                    android:id="@+id/tvRealName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:transitionName="@string/TransitionContenido"
                    android:layout_below="@+id/tvSuperhero"
                    android:layout_toRightOf="@+id/ivAvatar"
                    android:layout_toEndOf="@+id/ivAvatar"
                    tools:text="wdawd"/>
        </LinearLayout>
        <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="@string/TransitionDetalle"
                android:textStyle="italic"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:text="DC"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>



